Kubernetes/AgrOne/AgrOne-Dev/AgroGeoServer-Data-Eng/ingress-nginx/agrogeoserver-dev-data-eng-ingress-config.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/client-max-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
  name: agrogeoserver-dev-data-eng-ingres
  namespace: agrotech-dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'agrogeo-dev-data-eng.prodata.local'
      secretName: tls-secret-prodata-local
  rules:
  - host: agrogeo-dev-data-eng.prodata.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  agrogeoserver-data-eng-service
            port:
              number: 8080
